--- a/personnel.html
+++ b/personnel.html
@@ -40,7 +40,7 @@
       <h2>👩‍⚕️ Équipe Médicale</h2>
       <div class="staff-container">
         <div class="staff-card">
-          <img src="images/doctor_female.png" alt="Dr. Sara Arabi">
+          <img src="images/doctor_female.png" alt="Dr. Aya Raoui">
           <h3>Dr. Sara Arabi</h3>
           <p>Dermatologue</p>
           <button class="contact-btn" data-name="Dr. Sara Arabi" data-email="sara.arabi@clinique.tiznit.ma" data-phone="+212 6 12 34 56 78">Contact</button>
@@ -147,3 +147,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
